--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "npx eslint"
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0"
