--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "test": "vitest --coverage",
-    "lint": "npx eslint"
+    "lint": "eslint src/**"
   },
   "dependencies": {
     "axios": "^1.3.4",
