--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "react-router-dom": "^6.9.0"
   },
   "devDependencies": {
+    "@testing-library/dom": "^9.0.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
