--- a/package.json
+++ b/package.json
@@ -4,22 +4,30 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
+    "dev": "node server",
+    "build": "npm run build:client && npm run build:server",
+    "build:client": "vite build --ssrManifest --outDir dist/client",
+    "build:server": "vite build --ssr src/entry-server.tsx --outDir dist/server",
+    "preview": "cross-env NODE_ENV=production node server",
     "test": "vitest --coverage",
     "lint": "eslint src/**"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
+    "@types/express": "^4.17.17",
+    "@types/node": "^18.15.11",
     "axios": "^1.3.4",
+    "compression": "^1.7.4",
+    "cross-env": "^7.0.3",
+    "express": "^4.18.2",
     "html-react-parser": "^3.0.15",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.8",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
-    "redux-mock-store": "^1.5.4"
+    "redux-mock-store": "^1.5.4",
+    "sirv": "^2.0.2"
   },
   "devDependencies": {
     "@testing-library/dom": "^9.0.1",
