feat: add render for ssr

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,6 @@
     "baseUrl": "./src",
     "noFallthroughCasesInSwitch": true
   },
-  "include": [".eslintrc.cjs", "src", "vite.config.ts"],
+  "include": [".eslintrc.cjs", "src", "vite.config.ts", "server.js"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
