--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,10 +1,10 @@
 {
   "compilerOptions": {
-    "composite": true,
+    // "composite": true,
     "module": "ESNext",
     "moduleResolution": "Node",
     "allowSyntheticDefaultImports": true,
     "jsx": "preserve"
   },
-  "include": ["vite.config.ts", "src/entry-server.tsx", "src/vite-env.d.ts"]
+  "include": ["vite.config.ts", "src/entry-server.tsx", "src/vite-env.d.ts", "server.js"]
 }
