fix: change server (delete condition isProduct & change renderToPipeableStream)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,5 @@
     "baseUrl": "./src",
     "noFallthroughCasesInSwitch": true
   },
-  "include": [".eslintrc.cjs", "src", "vite.config.ts", "server.js"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "include": [".eslintrc.cjs", "src", "vite.config.ts", "server.js"]
 }
