--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "build:server": "vite build --ssr src/entry-server.tsx --outDir dist/server",
     "preview": "cross-env NODE_ENV=production node server",
     "test": "vitest --coverage",
+    "cy": "start-server-and-test dev http://localhost:5173 cy:open",
+    "cy:open": "cypress open",
     "lint": "eslint src/**"
   },
   "dependencies": {
@@ -19,6 +21,8 @@
     "axios": "^1.3.4",
     "compression": "^1.7.4",
     "cross-env": "^7.0.3",
+    "cypress-file-upload": "^5.0.8",
+    "eslint-plugin-cypress": "^2.13.2",
     "express": "^4.18.2",
     "html-react-parser": "^3.0.15",
     "react": "^18.2.0",
@@ -30,17 +34,21 @@
     "sirv": "^2.0.2"
   },
   "devDependencies": {
+    "@cypress/code-coverage": "^3.10.4",
     "@testing-library/dom": "^9.0.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
+    "@types/cypress__code-coverage": "^3.10.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "@typescript-eslint/parser": "^5.54.1",
     "@vitejs/plugin-react": "^3.1.0",
     "@vitest/coverage-c8": "^0.29.2",
+    "babel-plugin-istanbul": "^6.1.1",
     "c8": "^7.13.0",
+    "cypress": "^12.10.0",
     "eslint": "^8.37.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
@@ -52,10 +60,16 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "jsdom": "^21.1.1",
+    "nyc": "^15.1.0",
     "prettier": "^2.8.4",
     "sass": "^1.59.3",
+    "start-server-and-test": "^2.0.0",
     "typescript": "^4.9.3",
     "vite": "^4.1.0",
     "vitest": "^0.29.2"
+  },
+  "nyc": {
+    "sourceMap": false,
+    "instrument": false
   }
 }
