--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,4 @@
 {
   "presets": ["@babel/preset-react"],
-  "plugins": ["transform-class-properties", "istanbul"],
-  "env": {
-    "test": {
-      "plugins": ["istanbul"]
-    }
-  }
+  "plugins": ["transform-class-properties", "istanbul"]
 }
