--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "build:server": "vite build --ssr src/entry-server.tsx --outDir dist/server",
     "preview": "cross-env NODE_ENV=production node server",
     "test": "vitest --coverage",
-    "cy": "start-server-and-test dev http://localhost:5173 cy:open",
+    "cy": "start-server-and-test dev http://localhost:5173 cy:open ",
     "cy:open": "cypress open",
+    "cy:coverage": "npx nyc report",
     "lint": "eslint src/**"
   },
   "dependencies": {
@@ -66,6 +67,7 @@
     "start-server-and-test": "^2.0.0",
     "typescript": "^4.9.3",
     "vite": "^4.1.0",
+    "vite-plugin-istanbul": "^4.0.1",
     "vitest": "^0.29.2"
   },
   "nyc": {
