--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lint": "eslint src/**"
   },
   "dependencies": {
+    "@istanbuljs/nyc-config-typescript": "^1.0.2",
     "@reduxjs/toolkit": "^1.9.3",
     "@types/express": "^4.17.17",
     "@types/node": "^18.15.11",
@@ -32,7 +33,8 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
     "redux-mock-store": "^1.5.4",
-    "sirv": "^2.0.2"
+    "sirv": "^2.0.2",
+    "whatwg-fetch": "^3.6.2"
   },
   "devDependencies": {
     "@cypress/code-coverage": "^3.10.4",
@@ -43,10 +45,12 @@
     "@types/cypress__code-coverage": "^3.10.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/whatwg-fetch": "^0.0.33",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "@typescript-eslint/parser": "^5.54.1",
     "@vitejs/plugin-react": "^3.1.0",
     "@vitest/coverage-c8": "^0.29.2",
+    "@vitest/coverage-istanbul": "^0.30.1",
     "babel-plugin-istanbul": "^6.1.1",
     "c8": "^7.13.0",
     "cypress": "^12.10.0",
@@ -71,7 +75,7 @@
     "vitest": "^0.29.2"
   },
   "nyc": {
-    "sourceMap": false,
+    "sourceMap": true,
     "instrument": false
   }
 }
