--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "node server",
+    "dev": "nodemon --watch './**/*.ts' --exec node --loader ts-node/esm server.ts",
     "build": "npm run build:client && npm run build:server",
     "build:client": "vite build --outDir dist/client",
     "build:server": "vite build --ssr src/entry-server.tsx --outDir dist/server",
@@ -27,6 +27,7 @@
     "eslint-plugin-cypress": "^2.13.2",
     "express": "^4.18.2",
     "html-react-parser": "^3.0.15",
+    "nodemon": "^2.0.22",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.8",
@@ -34,6 +35,7 @@
     "react-router-dom": "^6.9.0",
     "redux-mock-store": "^1.5.4",
     "sirv": "^2.0.2",
+    "ts-node": "^10.9.1",
     "whatwg-fetch": "^3.6.2"
   },
   "devDependencies": {
