--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
     "allowJs": false,
     "skipLibCheck": true,
-    "esModuleInterop": false,
+    "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
@@ -19,5 +19,5 @@
     "noFallthroughCasesInSwitch": true,
     "types": ["cypress", "cypress-file-upload"]
   },
-  "include": [".eslintrc.cjs", "src", "vite.config.ts", "server.js"]
+  "include": [".eslintrc.cjs", "src", "vite.config.ts", "server.ts"]
 }
